<resources>
    <string name="app_name">mobile legends information</string>
    <string name="heroes_name">Nama Hero</string>
    <string name="heroes_role">Role Hero</string>
    <string name="description">Deskripsi Hero</string>
    <string name="welcome">Welcome Gamers</string>
    <string name="info_app">Please select and press to find out the details of the hero</string>
    <string name="about">About Me</string>
    <string name="study">Study at: </string>
    <string name="owner">Paslian Sahat Rafael</string>
    <string name="gmail">paslianp5@gmail.com</string>
    <string name="title_table_detail">information details</string>
    <string name="skin">Hero Skins</string>
    <string name="story">Hero Story</string>
    <string name="release_date">Release Date</string>
    <string name="content_release_date">Content Release Date</string>
    <string name="specialist">Specialist</string>
    <string name="content_specialist">Content Specialist</string>
    <string name="lane">Lane</string>
    <string name="content_lane">Content Lane</string>
    <string name="spell">Spell Recommendation</string>
    <string name="content_spell">Content spell</string>
    <string name="read_detail">read detail >></string>
    <string name="title_read_detail">Read Detail</string>
    <string name="price">Price</string>
    <string name="content_price">Content Price</string>
    <string name="content_role">Content Role</string>
    <string name="item_recomendations">Item Recommendations</string>
    <string name="share">Share into your Friend</string>
    <string-array name="data_photo">
        <item>https://static.wikia.nocookie.net/mobile-legends/images/9/9f/Nana_%28Sweet_Leonin%29.jpg/revision/latest/scale-to-width-down/1000?cb=20180602112431</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/a/af/Alucard_%28Demon_Hunter%29.png/revision/latest?cb=20230117092128</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/a/ac/Fanny_%28Blade_Dancer%29.jpg/revision/latest/scale-to-width-down/1000?cb=20220206153547</item>
        <item>https://www.indoesports.com/storage/media/lg/gatotkaca.jpg</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/d/d0/Bruno_%28Mech_Protector%29.jpg/revision/latest/scale-to-width-down/1000?cb=20200816040403</item>
        <item>https://assets.skor.id/crop/0x0:0x0/x/photo/2021/07/15/2164141579.jpg</item>
        <item>https://oneesports.blob.core.windows.net/cdn-data/sites/2/2021/04/Cyclops-2.jpg</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/4/46/Lesley_%28Deadly_Sniper%29.jpg/revision/latest/scale-to-width-down/1000?cb=20221022092026</item>
        <item>https://cdn.vcgamers.com/news/wp-content/uploads/2022/02/Minotaur-MLBB.jpg</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/9/92/Ocean_Gladiator_wall.jpg/revision/latest/scale-to-width-down/1000?cb=20200528124541</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/6/6a/Johnson_%28Mustang%29.jpg/revision/latest/scale-to-width-down/1000?cb=20220921093945</item>
    </string-array>
    <string-array name="data_name">
        <item>Nana</item>
        <item>Alucard</item>
        <item>Fanny</item>
        <item>Gatotkaca</item>
        <item>Bruno</item>
        <item>Kadita</item>
        <item>Cyclops</item>
        <item>Lesley</item>
        <item>Minotaur</item>
        <item>Atlas</item>
        <item>Johnson</item>
    </string-array>
    <string-array name="data_spell_recommendation">
        <item>: Flameshot</item>
        <item>: Retribution</item>
        <item>: Retribution</item>
        <item>: Vangance</item>
        <item>: Inspire</item>
        <item>: Petrify</item>
        <item>: Flicker</item>
        <item>: Flicker</item>
        <item>: Flicker</item>
        <item>: Flicker</item>
        <item>: Flicker</item>
    </string-array>
    <string-array name="img_skin_1">
        <item>https://static.wikia.nocookie.net/mobile-legends/images/2/20/Nana_%28Mecha_Baby%29.jpg/revision/latest/scale-to-width-down/1000?cb=20200423035541</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/e/e7/Alucard_%28Lightborn_-_Striker%29.jpg/revision/latest/scale-to-width-down/1000?cb=20220920085008</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/5/58/Fanny_%28Blade_of_Kibou%29.jpg/revision/latest/scale-to-width-down/1000?cb=20220214153705</item>
        <item>https://media-assets-ggwp.s3.ap-southeast-1.amazonaws.com/2023/05/Skin-Gatotkaca-Mobile-Legends-5.jpg</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/5/51/Bruno_%28Vanguard_Elite%29.png/revision/latest/scale-to-width-down/1000?cb=20180612072100</item>
        <item>https://cdn.oneesports.id/cdn-data/sites/2/2023/06/Mobile-Legends_Kadita.jpg</item>
        <item>https://gamefinity.id/wp-content/uploads/2022/01/Skin-Cyclops-SeaRescuer.jpg</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/f/ff/Lesley_%28Hawk-eyed_Sniper%29.jpg/revision/latest/scale-to-width-down/1000?cb=20221111142422</item>
        <item>https://gamefinity.id/wp-content/uploads/2021/10/Mobile-Legends-Minotaur.jpg</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/2/24/Atlas_%28Rune_Sentinel%29.jpg/revision/latest/scale-to-width-down/1000?cb=20230824125454</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/6/68/Johnson_%28Optimus_Prime%29.jpg/revision/latest/scale-to-width-down/1000?cb=20211214152518</item>
    </string-array>
    <string-array name="img_skin_2">
        <item>https://static.wikia.nocookie.net/mobile-legends/images/7/7e/Nana_%28Sundress%29.jpg/revision/latest/scale-to-width-down/1000?cb=20200721082600</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/5/5e/Alucard_%28Viscount%29.jpg/revision/latest/scale-to-width-down/1000?cb=20230201105535</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/b/b2/Fanny_%28Skylark%29.jpg/revision/latest/scale-to-width-down/1000?cb=20211010124153</item>
        <item>https://gamedaim.com/wp-content/uploads/2021/08/4-Daftar-Skin-Gatotkaca-Mobile-Legends-Terbaik-Saat-Ini.jpg</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/a/a8/Bruno_%28Street_Football%29.jpg/revision/latest?cb=20201119070651</item>
        <item>https://gamedaim.com/wp-content/uploads/2022/02/Kadita-ML-800x450.jpg</item>
        <item>https://dailyspin.id/wp-content/uploads/2023/04/image-128-1.jpg</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/6/63/Lesley_%28Angelic_Agent%29.jpg/revision/latest/scale-to-width-down/1000?cb=20200531065437</item>
        <item>https://gamedaim.com/wp-content/uploads/2022/01/Minotaur.jpg</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/c/c1/Atlas_%28Space_Mech%29.png/revision/latest/scale-to-width-down/1000?cb=20220908203813</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/d/d5/Johnson_%28S.A.B.E.R._Automata%29.jpg/revision/latest/scale-to-width-down/1000?cb=20220921093901</item>
    </string-array>
    <string-array name="img_skin_3">
        <item>https://static.wikia.nocookie.net/mobile-legends/images/e/e3/Nana_%28Slumber_Party%29.jpg/revision/latest/scale-to-width-down/1000?cb=20190711022230</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/b/b4/Alucard_%28Obsidian_Blade%29.jpg/revision/latest/scale-to-width-down/1000?cb=20230201105529</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/7/75/Fanny_%28Lightborn_-_Ranger%29.jpg/revision/latest?cb=20211010124546</item>
        <item>https://media-assets-ggwp.s3.ap-southeast-1.amazonaws.com/2023/05/Skin-Gatotkaca-Mobile-Legends-1.jpg</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/3/3a/Bruno_%28Halo_Striker%29.jpg/revision/latest/scale-to-width-down/1000?cb=20221111142411</item>
        <item>https://img.esportsku.com/wp-content/uploads//2023/07/kadita-mpl.jpg</item>
        <item>https://d1x91p7vw3vuq8.cloudfront.net/itemku-upload/20211229/e8dbj3ozy5nh0zdkd1002n.jpg</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/a/a1/Lesley_%28Cheergunner%29.jpg/revision/latest/scale-to-width-down/1000?cb=20210520070016</item>
        <item>https://dailyspin.id/wp-content/uploads/2021/01/minotaur-busting-yama-skin-mobile-legends.jpg</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/e/ec/Fuel_Turbine_wall.jpg/revision/latest/scale-to-width-down/1000?cb=20200907091800</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/1/1d/Johnson_%28Jeepney_Racer%29.jpg/revision/latest/scale-to-width-down/1000?cb=20181031101759</item>
    </string-array>
    <string-array name="data_lane">
        <item>: Mid</item>
        <item>: Jungle</item>
        <item>: Jungle</item>
        <item>: EXP</item>
        <item>: Gold</item>
        <item>: Mid</item>
        <item>: Mid</item>
        <item>: Gold</item>
        <item>: Roamer</item>
        <item>: Roamer</item>
        <item>: Roamer</item>
    </string-array>
    <string-array name="data_price">
        <item>: 6.500</item>
        <item>: 15.000</item>
        <item>: 24.000</item>
        <item>: 32.000</item>
        <item>: 15.000</item>
        <item>: 32.000</item>
        <item>: 15.000</item>
        <item>: 32.000</item>
        <item>: 15.000</item>
        <item>: 32.000</item>
        <item>: 32.000</item>
    </string-array>
    <string-array name="data_release">
        <item>: 2016</item>
        <item>: 2016</item>
        <item>: 2016</item>
        <item>: 2017</item>
        <item>: 2016</item>
        <item>: 2018</item>
        <item>: 2017</item>
        <item>: 2018</item>
        <item>: 2016</item>
        <item>: 2020</item>
        <item>: 2017</item>
    </string-array>
    <string-array name="data_specialist">
        <item>: Poke | Burst</item>
        <item>: Chase | Damage</item>
        <item>: Chase | Finisher</item>
        <item>: Crowd Control | Burst</item>
        <item>: Finisher | Burst</item>
        <item>: Burst | Charge</item>
        <item>: Poke | Control</item>
        <item>: Finisher | Burst</item>
        <item>: Crowd Control</item>
        <item>: Crowd Control | Initiator </item>
        <item>: Support | Crowd Control</item>
    </string-array>
    <string-array name="data_role">
        <item>: Mage</item>
        <item>: Fighter/Assasin</item>
        <item>: Assasin</item>
        <item>: Tank</item>
        <item>: Marksman</item>
        <item>: Mage</item>
        <item>: Mage</item>
        <item>: Marksman</item>
        <item>: Tank</item>
        <item>: Tank</item>
        <item>: Tank</item>
    </string-array>
</resources>