<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:src="@tools:sample/backgrounds/scenic"  />


        <TextView
            android:id="@+id/tv_item_name"
            style="@style/appLayout.textSize30"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/heroes_name"
            android:textStyle="bold"/>

        <TextView
            style="@style/appLayout.textSize20"
            android:layout_marginBottom="8dp"
            android:text="@string/skin"
            android:textStyle="bold"/>

        <LinearLayout
            style="@style/appLayout"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/img_skin_1"
                style="@style/imageMerging"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/img_skin_2"
                style="@style/imageMerging"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/img_skin_3"
                style="@style/imageMerging"
                tools:src="@tools:sample/avatars" />


        </LinearLayout>

        <TextView
            style="@style/appLayout.textSize20"
            android:layout_marginBottom="8dp"
            android:text="@string/story"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_item_description"
            style="@style/appLayout"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/description" />

        <TextView
            style="@style/appLayout.textSize20"
            android:layout_marginBottom="8dp"
            android:text="@string/title_table_detail"
            android:textStyle="bold"/>

        <TableLayout
            style="@style/appLayout"
            android:layout_marginBottom="16dp">

            <TableRow
                style="@style/tableRow">

                <TextView
                    style="@style/tableRowData"
                    android:text="@string/release_date" />

                <TextView
                    android:id="@+id/tv_release"
                    style="@style/tableRowContent"
                    android:text="@string/content_release_date" />
            </TableRow>

            <TableRow
                style="@style/tableRow">

                <TextView
                    style="@style/tableRowData"
                    android:text="@string/specialist" />

                <TextView
                    android:id="@+id/tv_specialist"
                    style="@style/tableRowContent"
                    android:text="@string/content_specialist" />
            </TableRow>

            <TableRow
                style="@style/tableRow">

                <TextView
                    style="@style/tableRowData"
                    android:text="@string/lane" />

                <TextView
                    android:id="@+id/tv_lane"
                    style="@style/tableRowContent"
                    android:text="@string/content_lane" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/tableRowData"
                    android:text="@string/spell" />

                <TextView
                    android:id="@+id/tv_spell"
                    style="@style/tableRowContent"
                    android:text="@string/content_spell" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/tableRowData"
                    android:text="@string/heroes_role" />

                <TextView
                    android:id="@+id/tv_role"
                    style="@style/tableRowContent"
                    android:text="@string/content_role" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/tableRowData"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/tv_price"
                    style="@style/tableRowContent"
                    android:text="@string/content_price" />
            </TableRow>
        </TableLayout>

        <TextView
            style="@style/appLayout.textSize20"
            android:layout_marginBottom="8dp"
            android:text="@string/item_recomendations"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/img_item_recomendation"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="30dp"
            tools:src="@tools:sample/avatars" />


    </LinearLayout>
</ScrollView>