<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <TextView
                    style="@style/titleCenter"
                    android:text="@string/about" />

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:src="@drawable/foto_pribadi"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    app:civ_border_width="1dp" />

                <TextView
                    style="@style/text.size30"
                    android:text="@string/owner"
                    android:textAllCaps="true"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    style="@style/text.size20"
                    android:text="@string/gmail"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    />

        </LinearLayout>

</ScrollView>